--- a/index.html
+++ b/index.html
@@ -49,5 +49,5 @@
         <script src="./templates/tpl_add_task.js"></script>
         <script src="./templates/tpl_summary.js"></script>
     </body>
-
+    <h1>Test</h1>
 </html>
