added base strukture to HTML sites. added new script (greetings.js) an bind it to the htmlsceleton

--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
 
     <body>
 
+        <head id="header_start">
+            <img id="logo" src="#" alt="Join Logo">
+            <div>
+                <span>Not a Join User?</span>
+                <button id="sign_up_btn"></button>
+            </div>
 
-    <!-- =============== insert Content here =============== -->
-
+        </head>
+        
+        <div id="login_form_container"></div>
 
         <script src="./script.js"></script>
         <script src="./scripts/login.js"></script>
@@ -40,6 +47,7 @@
         <script src="./scripts/add_task.js"></script>
         <script src="./scripts/dialog_add_contact.js"></script>
         <script src="./scripts/contacts.js"></script>
+        <script src="./scripts/greetings.js"></script>
         <script src="./scripts/summary.js"></script>
 
         <script src="./templates/tpl_login.js"></script>
