--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -24,14 +24,11 @@
 
     <body>
 
-        <head id="header"></head>
-
-        <main id="summary_page_content">
-
-            <nav id="nav_menu"></nav>
-            <section id="summary_content"></section>
-
-        </main>
+        <head id="header_start">
+            <img id="logo" src="#" alt="Join Logo">
+        </head>
+        
+        <div id="signup_form_container"></div>
 
         <script src="./script.js"></script>
         <script src="./scripts/login.js"></script>
