--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -24,7 +24,13 @@
 
     <body>
 
-        <head id="header"></head>
+        <head id="header">
+            <span id="page_title">Kanban Project Management Tool</span>
+            <div id="info_container">
+                <img id="help_img" src="#" alt="Help auestion mark">
+                <img src="#" alt="User picture">
+            </div>
+        </head>
 
         <main id="contacts_page_container">
 
