changed a little mistake: changed sectionname head to header..... head not allowed in body

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <body>
 
-        <head id="header_start">
+        <header id="header_start">
             <img id="logo" src="#" alt="Join Logo">
             <div>
                 <span>Not a Join User?</span>
                 <button id="sign_up_btn"></button>
             </div>
 
-        </head>
+        </header>
         
         <div id="login_form_container"></div>
 
