--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -24,9 +24,9 @@
 
     <body>
 
-        <head id="header_start">
+        <header id="header_start">
             <img id="logo" src="#" alt="Join Logo">
-        </head>
+        </header>
         
         <div id="signup_form_container"></div>
 
