add side nav bar and header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
 
         <header id="header_start">
-            <img id="logo" src="#" alt="Join Logo">
+            <img id="logo" src="./img/logo.png" alt="Join Logo">
             <div>
                 <span>Not a Join User?</span>
                 <button id="sign_up_btn"></button>
