add navbar button HTML pages links

--- a/pages/board.html
+++ b/pages/board.html
@@ -45,10 +45,10 @@
             </div>
         </section>
 
-        <main id="task_page_container">
-
+        <main id="summary_page_content">
+            
             <nav id="nav_menu"></nav>
-            <section id="task_content"></section>
+            <section id="summary_content"></section>
 
         </main>
 
