--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -27,10 +27,23 @@
         <header id="header">
             <span id="page_title">Kanban Project Management Tool</span>
             <div id="info_container">
-                <img id="help_img" src="#" alt="Help auestion mark">
+                <img id="help_img" src="/img/help.svg" alt="Help auestion mark">
                 <img src="#" alt="User picture">
             </div>
         </header>
+        <section class="nav_bar_side">
+            <img id="logo" src="/img/logo.png" alt="Join Logo">
+            <div>
+            <a href="summary.html" class="nav_bar_side_btn"><img src="/img/summary.svg" alt="Summary">Summary</a>
+            <a href="add_task.html" class="nav_bar_side_btn"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
+            <a href="board.html" class="nav_bar_side_btn"><img src="/img/board.svg" alt="Board">Board</a>
+            <a href="contacts.html" class="nav_bar_side_btn"><img src="/img/contacts.svg" alt="Contacts">Contacts</a>
+            </div>
+            <div class="nav_bar_side_bottom">
+                <a href="privacy_policy.html" class="nav_bar_side_btn">Privacy Policy</a>
+                <a href="legal_notice.html" class="nav_bar_side_btn">Legal notice</a>
+            </div>
+        </section>
 
         <main id="data_privacy_page_container">
 
