--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -34,14 +34,14 @@
         <section class="nav_bar_side">
             <img id="logo" src="/img/logo.png" alt="Join Logo">
             <div>
-            <button class="nav_bar_side_btn"><img src="/img/summary.svg" alt="Summary">Summary</button>
-            <button class="nav_bar_side_btn"><img src="/img/add-task.svg" alt="Add Task">Add Task</button>
-            <button class="nav_bar_side_btn"><img src="/img/board.svg" alt="Board">Board</button>
-            <button class="nav_bar_side_btn"><img src="/img/contacts.svg" alt="Contacts">Contacts</button>
+            <a href="summary.html" class="nav_bar_side_btn"><img src="/img/summary.svg" alt="Summary">Summary</a>
+            <a href="add_task.html" class="nav_bar_side_btn"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
+            <a href="board.html" class="nav_bar_side_btn"><img src="/img/board.svg" alt="Board">Board</a>
+            <a href="contacts.html" class="nav_bar_side_btn"><img src="/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
             <div class="nav_bar_side_bottom">
-                <button class="nav_bar_side_btn">Privacy Policy</button>
-                <button class="nav_bar_side_btn">Legal notice</button>
+                <a href="privacy_policy.html" class="nav_bar_side_btn">Privacy Policy</a>
+                <a href="legal_notice.html" class="nav_bar_side_btn">Legal notice</a>
             </div>
         </section>
         </header>
