--- a/pages/sign_in.html
+++ b/pages/sign_in.html
@@ -8,24 +8,28 @@
     <title>Kanban Board</title>
     <link rel="icon" href="#" type="image/x-icon">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/styles/login_signup.css">
 
 <body>
     <main>
-        <img src="/img/logo.png" alt="the word: join with a big J with a blue dot on the left side," class="joinlogo">
+        <div class="content-wrapper">
+            <img src="/img/logo.png" alt="the word: join with a big J with a blue dot on the left side," class="joinlogo">
         <div class="signup">
-            <p>Not a Join user?</p><button>Sign up</button>
+            <p>Not a Join user?</p><button class="signupBtn">Sign up</button>
         </div>
         <form action="">
             <h1>Log in</h1>
-            <input type="email">
-            <input type="password">
-            <div>
-                <button>Log in</button>
-                <button>Guest Log in</button>
+            <div class="bluestrip"></div>
+            <div><input type="email" placeholder="Email"><img src="" alt=""></div>
+            <input type="password" placeholder="Password">
+            <div class="btnholder">
+                <button class="loginBtn">Log in</button>
+                <button class="guestloginBtn">Guest Log in</button>
             </div>
         </form>
+        </div>
+        
     </main>
 </body>
 
