--- a/pages/sign_in.html
+++ b/pages/sign_in.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <div class="content-wrapper">
-            <img src="/img/logo.png" alt="the word: join with a big J with a blue dot on the left side," class="joinlogo">
+            <img src="/img/logo-white.png" alt="the word: join with a big J with a blue dot on the left side," class="joinlogo">
         <div class="signup">
             <p>Not a Join user?</p><button class="signupBtn">Sign up</button>
         </div>
