--- a/pages/legal_notice.html
+++ b/pages/legal_notice.html
@@ -36,7 +36,7 @@
         <main id="legal_page_container">
 
             <nav id="nav_menu">
-                <img id="logo" src="/img/logo.png" alt="Join Logo">
+                <img id="logo" src="/img/logo-white.png" alt="Join Logo">
                     <div>
                         <a href="summary.html"><img src="/img/summary.svg" alt="Summary">Summary</a>
                         <a href="add_task.html"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
