--- a/pages/summary.html
+++ b/pages/summary.html
@@ -32,7 +32,7 @@
             </div>
         </header>
         <section class="nav_bar_side">
-            <img id="logo" src="/img/logo.png" alt="Join Logo">
+            <img id="logo" src="/img/logo-white.png" alt="Join Logo">
             <div>
             <a href="summary.html" class="nav_bar_side_btn"><img src="/img/summary.svg" alt="Summary">Summary</a>
             <a href="add_task.html" class="nav_bar_side_btn"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
