--- a/pages/sign_in.html
+++ b/pages/sign_in.html
@@ -12,25 +12,29 @@
     <link rel="stylesheet" href="/styles/login_signup.css">
 
 <body>
-    <main>
-        <div class="content-wrapper">
-            <img src="/img/logo-white.png" alt="the word: join with a big J with a blue dot on the left side," class="joinlogo">
+    <header>
+        <div class="content-wrapper"><img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
+            class="joinlogo">
         <div class="signup">
             <p>Not a Join user?</p><button class="signupBtn">Sign up</button>
-        </div>
-        <form action="">
-            <h1>Log in</h1>
-            <div class="bluestrip"></div>
-            <div><input type="email" placeholder="Email"><img src="" alt=""></div>
-            <input type="password" placeholder="Password">
-            <div class="btnholder">
-                <button class="loginBtn">Log in</button>
-                <button class="guestloginBtn">Guest Log in</button>
-            </div>
-        </form>
-        </div>
+        </div></div>
         
+    </header>
+    <main>
+        <div class="content-wrapper">
+            <form action="">
+                <h1>Log in</h1>
+                <div class="bluestrip"></div>
+                <div><input type="email" placeholder="Email"><img src="" alt=""></div>
+                <input type="password" placeholder="Password">
+                <div class="btnholder">
+                    <button class="loginBtn">Log in</button>
+                    <button class="guestloginBtn">Guest Log in</button>
+                </div>
+            </form>
+        </div>
     </main>
+    <footer class="content-wrapper"></footer>
 </body>
 
 </html>
