--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -9,32 +9,50 @@
     <link rel="icon" href="#" type="image/x-icon">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/styles/login_signup.css">
+    <link rel="stylesheet" href="/styles/login-signup.css">
 
 <body>
-    <header>
-        <div class="content-wrapper"><img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
-            class="joinlogo">
-        <div class="signup">
-            <p>Not a Join user?</p><button class="signupBtn">Sign up</button>
-        </div></div>
-        
+    <header class="header">
+        <div class="content-wrapper">
+            <div class="header__logoAndSignup">
+                <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
+                    class="header__joinlogo">
+                <div class="header__signup">
+                    <p class="header__signup__message">Not a Join user?</p><button class="header__signup__signupBtn">Sign
+                        up</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <div class="content-wrapper">
-            <form action="">
-                <h1>Log in</h1>
-                <div class="bluestrip"></div>
-                <div><input type="email" placeholder="Email"><img src="" alt=""></div>
-                <input type="password" placeholder="Password">
-                <div class="btnholder">
+            <form class="form">
+
+                <div class="form__heading">
+                    <h1 class="form__heading__h1">Log in</h1>
+                    <div class="form__heading__bluestrip"></div>
+                </div>
+
+                <div class="form__inputfields">
+                    <div class="form__inputfields__email-wrapper"><input class="form__inputfields__email-input" id="email" type="email" placeholder="Email"><img class="form__inputfields__icon__mail" src="/img/mail.svg" alt="icon of an email"></div>
+                    <div class="form__inputfields__password-wrapper"><input class="form__inputfields__password-input" id="password" type="password" placeholder="Password"><img class="form__inputfields__icon__lock" src="/img/lock.svg" alt="icon of a lock"></div>
+                </div>
+
+                <div class="form__btnholder">
                     <button class="loginBtn">Log in</button>
                     <button class="guestloginBtn">Guest Log in</button>
                 </div>
             </form>
         </div>
     </main>
-    <footer class="content-wrapper"></footer>
+    <footer class="footer">
+        <div class="content-wrapper">
+        <div class="footer__privacy-legal-box">
+            <a href="" class="footer__privacy-legal-box__link-to-privacy">Privacy Policy</a>
+            <a href="" class="footer__privacy-legal-box__link-to-legal">Legal notice</a>
+        </div>
+        </div>
+    </footer>
 </body>
 
 </html>
