--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="/styles/login-signup.css">
 
 <body>
-    <header class="header">
-        <div class="content-wrapper">
-            <div class="header__logoAndSignup">
+    <header class="header content-wrapper">
+            <div class="header__logo-and-signup">
                 <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                     class="header__joinlogo">
                 <div class="header__signup">
@@ -22,7 +21,6 @@
                         up</button>
                 </div>
             </div>
-        </div>
     </header>
     <main>
         <div class="content-wrapper">
