change p to span. added nameConvention for JS

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -18,8 +18,8 @@
                 <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                     class="header__joinlogo">
                 <div class="header__signup">
-                    <p class="header__signup__message">Not a Join user?</p><button class="header__signup__signupBtn">Sign
-                        up</button>
+                    <span class="header__signup__message">Not a Join user?</span>
+                    <button class="header__signup__signupBtn">Signup</button>
                 </div>
             </div>
         </div>
