Sign up build started

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -32,8 +32,12 @@
                 </div>
 
                 <div class="form__inputfields">
-                    <div class="form__inputfields__email-wrapper"><input class="form__inputfields__email-input" id="email" type="email" placeholder="Email"><img class="form__inputfields__icon__mail" src="/img/mail.svg" alt="icon of an email"></div>
-                    <div class="form__inputfields__password-wrapper"><input class="form__inputfields__password-input" id="password" type="password" placeholder="Password"><img class="form__inputfields__icon__lock" src="/img/lock.svg" alt="icon of a lock"></div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
+                        <img class="form__inputfields__icon" src="/img/mail.svg" alt="icon of an email"></div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
+                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock"></div>
                 </div>
 
                 <div class="form__btnholder">
