--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -15,36 +15,39 @@
 
 <body>
     <header class="header content-wrapper">
-            <div class="header__logo-and-signup">
-                <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
-                    class="header__joinlogo">
-            </div>
+        <div class="header__logo-and-signup">
+            <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
+                class="header__joinlogo">
+        </div>
         </div>
     </header>
     <main>
         <div class="content-wrapper">
             <form class="form">
-
                 <div class="form__heading">
                     <h1 class="form__heading__h1">Sign up</h1>
                     <div class="form__heading__bluestrip"></div>
                 </div>
-
                 <div class="form__inputfields">
-                    <div class="form__inputfields__email-wrapper"><input class="form__inputfields__email-input"
-                            id="name" type="text" placeholder="Name"><img class="form__inputfields__icon__mail"
-                            src="/img/mail.svg" alt="icon of an email"></div>
-                    <div class="form__inputfields__email-wrapper"><input class="form__inputfields__email-input"
-                            id="email" type="email" placeholder="Email"><img class="form__inputfields__icon__mail"
-                            src="/img/mail.svg" alt="icon of an email"></div>
-                    <div class="form__inputfields__password-wrapper"><input class="form__inputfields__password-input"
-                            id="password" type="password" placeholder="Password"><img
-                            class="form__inputfields__icon__lock" src="/img/lock.svg" alt="icon of a lock"></div>
-                    <div class="form__inputfields__password-wrapper"><input class="form__inputfields__password-input"
-                            id="password" type="password" placeholder="Password"><img
-                            class="form__inputfields__icon__lock" src="/img/lock.svg" alt="icon of a lock"></div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="name" type="text" placeholder="Name">
+                        <img class="form__inputfields__icon" src="/img/person.svg" alt="icon of an person">
+                    </div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
+                        <img class="form__inputfields__icon" src="/img/mail.svg" alt="icon of an email">
+                    </div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
+                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock">
+                    </div>
+                    <div class="form__inputfield__wrapper">
+                        <input class="form__inputfield__input" id="confirm-password" type="password"
+                            placeholder="Confirm Password">
+                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock">
+                    </div>
+                    <p><input type="checkbox"><span>I accept the <a>Privacy Policy</a></span></p>
                 </div>
-
                 <div class="form__btnholder">
                     <button class="loginBtn">Sign up</button>
                 </div>
