Fonts and Imgs adjusted to new assets structure

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header content-wrapper">
         <div class="header__logo-and-signup">
-            <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
+            <img src="/assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                 class="header__joinlogo">
         </div>
         </div>
@@ -25,26 +25,27 @@
         <div class="content-wrapper">
             <form class="form">
                 <div class="form__heading">
+                    <img src="/assets/img/arrow-left.svg" alt="blue arrow that points to the left">
                     <h1 class="form__heading__h1">Sign up</h1>
                     <div class="form__heading__bluestrip"></div>
                 </div>
                 <div class="form__inputfields">
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="name" type="text" placeholder="Name">
-                        <img class="form__inputfields__icon" src="/img/person.svg" alt="icon of an person">
+                        <img class="form__inputfields__icon" src="/assets/img/person.svg" alt="icon of an person">
                     </div>
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
-                        <img class="form__inputfields__icon" src="/img/mail.svg" alt="icon of an email">
+                        <img class="form__inputfields__icon" src="/assets/img/mail.svg" alt="icon of an email">
                     </div>
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
-                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock">
+                        <img class="form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock">
                     </div>
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="confirm-password" type="password"
                             placeholder="Confirm Password">
-                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock">
+                        <img class="form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock">
                     </div>
                     <p><input type="checkbox"><span>I accept the <a>Privacy Policy</a></span></p>
                 </div>
