--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header content-wrapper">
             <div class="header__logo-and-signup">
-                <img src="/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
+                <img src="/assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                     class="header__joinlogo">
                 <div class="header__signup">
                     <span class="header__signup__message">Not a Join user?</span>
@@ -34,10 +34,10 @@
                 <div class="form__inputfields">
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
-                        <img class="form__inputfields__icon" src="/img/mail.svg" alt="icon of an email"></div>
+                        <img class="form__inputfields__icon" src="/assets/img/mail.svg" alt="icon of an email"></div>
                     <div class="form__inputfield__wrapper">
                         <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
-                        <img class="form__inputfields__icon" src="/img/lock.svg" alt="icon of a lock"></div>
+                        <img class="form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock"></div>
                 </div>
 
                 <div class="form__btnholder">
