changed classnames, fixed architecture on the main html pages

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -24,10 +24,10 @@
     </header>
     <main>
         <div class="content-wrapper">
-            <form class="form">
+            <form class="login-form">
 
-                <div class="form__heading">
-                    <h1 class="form__heading__h1">Log in</h1>
+                <div class="login-form__heading">
+                    <h1>Log in</h1>
                     <div class="form__heading__bluestrip"></div>
                 </div>
 
