Privacy policy name changed cause of naming convention Renamed classes sing-in/sign-up to 1 classname

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../styles/login-signup.css">
 
 <body>
-    <header class="header content-wrapper">
+    <header class="header">
             <div class="header__logo-and-signup">
                 <img src="../assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                     class="header__joinlogo">
@@ -24,23 +24,23 @@
     </header>
     <main>
         <div class="content-wrapper">
-            <form class="login-form">
+            <form class="useraccess-form">
 
-                <div class="login-form__heading">
+                <div class="useraccess-form__heading">
                     <h1>Log in</h1>
-                    <div class="form__heading__bluestrip"></div>
+                    <div class="useraccess-form__heading__bluestrip"></div>
                 </div>
 
-                <div class="form__inputfields">
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
-                        <img class="form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email"></div>
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
-                        <img class="form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock"></div>
+                <div class="useraccess-form__inputfields">
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="email" type="email" placeholder="Email">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email"></div>
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="password" type="password" placeholder="Password">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock"></div>
                 </div>
 
-                <div class="form__btnholder">
+                <div class="useraccess-form__btnholder">
                     <button class="loginBtn">Log in</button>
                     <button class="guestloginBtn">Guest Log in</button>
                 </div>
