--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header content-wrapper">
+    <header class="header">
         <div class="header__logo-and-signup">
             <img src="../assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                 class="header__joinlogo">
@@ -24,33 +24,33 @@
     <main>
         <div class="content-wrapper">
 
-            <form class="form">
-                    <img class="form__arrowicon" src="../assets/img/arrow-left.svg" alt="blue arrow that points to the left">
-                    <div class="form__heading">
-                        <h1 class="form__heading__h1">Sign up</h1>
-                        <div class="form__heading__bluestrip"></div>
+            <form class="useraccess-form">
+                    <img class="useraccess-form__arrowicon" src="../assets/img/arrow-left.svg" alt="blue arrow that points to the left">
+                    <div class="useraccess-form__heading">
+                        <h1 class="useraccess-form__heading__h1">Sign up</h1>
+                        <div class="useraccess-form__heading__bluestrip"></div>
                     </div>
-                <div class="form__inputfields">
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="name" type="text" placeholder="Name">
-                        <img class="form__inputfields__icon" src="../assets/img/person.svg" alt="icon of an person">
+                <div class="useraccess-form__inputfields">
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="name" type="text" placeholder="Name">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/person.svg" alt="icon of an person">
                     </div>
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="email" type="email" placeholder="Email">
-                        <img class="form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email">
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="email" type="email" placeholder="Email">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email">
                     </div>
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="password" type="password" placeholder="Password">
-                        <img class="form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="password" type="password" placeholder="Password">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                     </div>
-                    <div class="form__inputfield__wrapper">
-                        <input class="form__inputfield__input" id="confirm-password" type="password"
+                    <div class="useraccess-form__inputfield__wrapper">
+                        <input class="useraccess-form__inputfield__input" id="confirm-password" type="password"
                             placeholder="Confirm Password">
-                        <img class="form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
+                        <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                     </div>
                     <p><input type="checkbox"><span>I accept the <a href="">Privacy Policy</a></span></p>
                 </div>
-                <div class="form__btnholder">
+                <div class="useraccess-form__btnholder">
                     <button class="loginBtn">Sign up</button>
                 </div>
             </form>
