--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -4,33 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Kanban Board</title>
     <link rel="icon" href="#" type="image/x-icon">
-
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
+</head>
 
 <body>
-    <header class="header">
+    <header class="header content-wrapper">
             <div class="header__logo-and-signup">
                 <img src="../assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
                     class="header__joinlogo">
                 <div class="header__signup">
                     <span class="header__signup__message">Not a Join user?</span>
-                    <button class="header__signup__signupBtn">Signup</button>
+                    <button class="btn header__signup__signupBtn">Sign up</button>
                 </div>
             </div>
     </header>
-    <main>
-        <div class="content-wrapper">
-            <form class="useraccess-form">
 
+    <main class="content-wrapper">
+            <form class="useraccess-form">
                 <div class="useraccess-form__heading">
                     <h1>Log in</h1>
                     <div class="useraccess-form__heading__bluestrip"></div>
                 </div>
-
                 <div class="useraccess-form__inputfields">
                     <div class="useraccess-form__inputfield__wrapper">
                         <input class="useraccess-form__inputfield__input" id="email" type="email" placeholder="Email">
@@ -39,22 +36,19 @@
                         <input class="useraccess-form__inputfield__input" id="password" type="password" placeholder="Password">
                         <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock"></div>
                 </div>
-
                 <div class="useraccess-form__btnholder">
-                    <button class="loginBtn">Log in</button>
-                    <button class="guestloginBtn">Guest Log in</button>
+                    <button class="btn">Log in</button>
+                    <button class="btn guest">Guest Log in</button>
                 </div>
             </form>
-        </div>
     </main>
-    <footer class="footer">
-        <div class="content-wrapper">
+
+    <footer class="footer content-wrapper">
         <div class="footer__privacy-legal-box">
-            <a href="" class="footer__privacy-legal-box__link-to-privacy">Privacy Policy</a>
-            <a href="" class="footer__privacy-legal-box__link-to-legal">Legal notice</a>
-        </div>
+            <a href="" class="footer__privacy-legal-box__links">Privacy Policy</a>
+            <a href="" class="footer__privacy-legal-box__links">Legal notice</a>
         </div>
     </footer>
-</body>
 
+</body>
 </html>
