add summary content buttons in html

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -57,6 +57,19 @@
                     <div id="blue-seperator"></div>
                     <span>Key Metrics at a Glance</span>
                 </div>
+                <!--Summary Content will be loaded here dynamically--> 
+                <div class="summary-content__metrics content-wrapper">
+                    <div class="summary-content__metrics__row">
+                        <button>To-do</button>
+                        <button>Done</button>
+                    </div>
+                    <div class="summary-content__metrics__row"><button>Prority</button></div>
+                    <div class="summary-content__metrics__row">
+                        <button>Tasks in Board</button>
+                        <button>Tasks In Progress</button>
+                        <button>Awaiting Feedback</button>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
