summary review - added a comment

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -60,10 +60,11 @@
                 <!--Summary Content will be loaded here dynamically--> 
                 <div class="summary-content__metrics content-wrapper">
                     <div class="summary-content__metrics__row">
-                        <button>To-do</button>
+                        <button>To-do</button>  <!-- Ich würde hier keine buttons verwenden. buttons haben von html eigene eigenschaften. besser eine divbox. Lässt sich später auch besser bearbeiten für das carddesign. Hier müssen ja noch ein img rein, dann ne weitere box mit 2 span. Der anzahl der to dos und der bezeichnung to-do. ähnlich würde ich auch bei den anderen vorgehen. ausser du hast da andere erfahrungen gemacht. bin da immer offen =) -->
                         <button>Done</button>
                     </div>
-                    <div class="summary-content__metrics__row"><button>Prority</button></div>
+                    <div class="summary-content__metrics__row">
+                        <button>Prority</button></div>
                     <div class="summary-content__metrics__row">
                         <button>Tasks in Board</button>
                         <button>Tasks In Progress</button>
