Add favicon to all html files

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
-    <link rel="icon" href="#" type="image/x-icon">
+    <link rel="icon" href="/assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
 </head>
@@ -47,7 +47,7 @@
                     <p class="useraccess-form__privacy-policy"><img src="/assets/img/checkbtn-unchecked.svg" class="useraccess-form__privacy-policy__checkbox"><span class="useraccess-form__privacy-policy__infotext">I accept the <a href="" class="useraccess-form__privacy-policy__link">Privacy Policy</a></span></p>
                 </div>
                 <div class="useraccess-form__btnholder">
-                    <button class="loginBtn">Sign up</button>
+                    <button class="btn">Sign up</button>
                 </div>
             </form>
     </main>
