add box hover style

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -121,7 +121,8 @@
                         </div>    
                     </div>
                     <div class="summary-content__right">
-                        <h3>Good morning!</h3>  <!--Soll je nach Tageszeit wechseln-->
+                        <h4>Good morning!</h4>
+                        <span>Hier Name (nur wenn Eingeloggt, sonst leer)</span>  <!--Soll je nach Tageszeit wechseln-->
                 </div>
             </section>
         </div>
