--- a/pages/summary.html
+++ b/pages/summary.html
@@ -30,7 +30,7 @@
 
             <div class="nav-menu__all-buttons-container">
                 <div class="nav-menu__buttons-container">
-                    <a class="summary-btn" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                    <a class="nav-button-hover" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
                     <a href="add_task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                     <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                     <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
@@ -66,7 +66,7 @@
                         <div class="summary-content__metrics__row">
 
                             <div class="summary-content__metrics__row__box">
-                                <img src="/assets/img/to-do.png" alt="To-do Image">
+                                <img src="/assets/img/to-do.svg" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
                                     <span>To-do</span>
